# Tracert

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-windows.yml  cross-platform.yml
.qoder/rules/: donotbuild.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: HopsTable.tsx  InputPanel.tsx  StatusBar.tsx  TerminalOutput.tsx  TopologyMap.tsx  TracerHeader.tsx  WorldMap.tsx
src/debug/: traps.ts
src/hooks/: use-trace.ts  useTraceSimulation.ts  useTraceStream.ts
src/pages/: Index.tsx
src/types/: trace.ts
