[package]
name = "TraceRT"
version = "0.1.0"
description = "A Tauri App"
authors = ["pamod-maduabshana"]
license = ""
repository = "https://github.com/pamod-madubashana/TraceRT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
regex = "1.10"
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-http = "2.5.4"
tauri-plugin-opener = "2.0"
env_logger = "0.10.0"
log = "0.4.14"
chrono = { version = "0.4.23", features = ["clock"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
dirs = "5.0"
url = "2.2"
lazy_static = "1.4.0"


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]